# Scrapiron_and_the_Bear

./: .cursorrules  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  domain_master_plan_v2.md  fire_tots_spec_v2.md  pyproject.toml
.agents/skills/fire-ecology/: SKILL.md
.github/workflows/: ci.yml
configs/: tattletots_integration.json
docs/: COORDINATION.md
scripts/: run_with_tattletots.py
src/fire_ecology/: __init__.py  cli.py  comparison.py
src/fire_ecology/adapter/: __init__.py  fire_adapter.py
src/fire_ecology/architectures/: __init__.py  a0_human.py  a1_camera_ml.py  a2_centralized.py  a3_federated.py  a4_bma.py  base.py
src/fire_ecology/drones/: __init__.py  body_plan.py  drone_genome.py  drone_state.py
src/fire_ecology/environment/: __init__.py  fire.py  fuel.py  terrain.py  weather.py
src/fire_ecology/metrics/: __init__.py  fire_metrics.py
src/fire_ecology/scenarios/: __init__.py  phased_deployment.py
src/fire_ecology/sensors/: __init__.py  camera_tower.py  fuel_moisture.py  opir.py  weather_station.py
src/fire_ecology/users/: __init__.py  fire_users.py
tests/: test_a4_bma.py  test_adapter.py  test_architectures.py  test_cli.py  test_comparison.py  test_drones.py  test_fire.py  test_fuel.py  test_metrics.py  test_scenarios.py  test_sensors.py  test_smoke.py  test_terrain.py  test_users.py  test_weather.py
